[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools-scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "device_test_core/_version.py"

[project]
name = "device_test_core"
description = "Device test library"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["device", "testing"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
  "python-dotenv >= 1.0.0, < 1.1.0",
  "randomname >= 0.1.5, < 0.2.0",
  "tenacity >= 8.1.0, < 9.0.0",
]

[project.optional-dependencies]
all = [
    "device-test-core[ssh]",
    "device-test-core[docker]",
    "device-test-core[local]",
]
ssh = [
    "paramiko >= 3.5, < 3.6",
    "scp >= 0.14.4, < 0.15.0",
]
local = []
docker = [
    "docker >= 7.0.0, < 7.1.0"
]
