[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools-scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "device_test_core/_version.py"

[project]
name = "device_test_core"
description = "Device test library"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["device", "testing"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
  "python-dotenv >= 1.0.0, < 1.1.0",
  "randomname >= 0.1.5, < 0.2.0",
  "tenacity >= 8.1.0, < 9.0.0",
  "dateparser >= 1.2.0, < 1.3.0",
]

[project.optional-dependencies]
all = [
    "device-test-core[ssh]",
    "device-test-core[docker]",
    "device-test-core[local]",
]
ssh = [
    "paramiko >= 3.5, < 3.6",
    "scp >= 0.14.4, < 0.15.0",
]
local = []
docker = [
    # Note: Use a fork of docker-py due to an issue with the exec_run
    # command which can result in the commands' output (both stdout and stderr)
    # being omited from the response (though the exit code is correct). This causes
    # all following assertions to fail unexpectedly.
    # See the source issue https://github.com/docker/docker-py/issues/3332
    # "docker >= 7.1.0, < 7.2.0"
    "docker @ git+https://github.com/reubenmiller/docker-py.git@9d65da7"
]
